--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -1,10 +1,12 @@
 .mySkills {
   /* border: solid; */
   margin-top: 50px;
+  box-shadow: rgba(33, 35, 38, 0.2) 0px 10px 10px -10px;
 }
-.mySkills .section-container h1 {
+.mySkills .section-container h2{
   text-align: center;
   font-size: 45px;
+  margin-bottom: 30px;
 }
 .mySkills .skill-content {
   display: flex;
@@ -51,9 +53,6 @@
   border-radius: 10px;
   box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
 }
-.mySkills .column-right .info a img {
-  padding: 10px 40px;
-}
 
 @media screen and (max-width: 781px){
   .mySkills {
@@ -62,10 +61,17 @@
   .mySkills .column-right .info a {
     margin-right: 30px;
   }
+
+  .skill-content .column-left{
+    display: none;
+  }
 }
 
 @media screen and (max-width: 441px){
   .mySkills .column-left .text{
     font-size: 25px;
+  }
+  .column-left{
+    display: none;
   }
 }
