--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,27 +1,37 @@
 .footer {
   margin-top: 50px;
-  height: 100px;
+  height: 150px;
   width: 100%;
   color: #fff;
   background-color: #000;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
 }
+
 .footer-box {
   display: flex;
   text-align: center;
   justify-content: space-between;
   margin: 20px;
 }
+
 .footerEnd {
   text-align: center;
   margin-top: 20px;
 }
 
-@media screen and (max-width: 781px){
+span a{
+  margin-left: 10px;
+  color: #7ab9fc;
+}
+
+@media screen and (max-width: 781px) {
   .footer {
-      margin-top: 30px;
-    }
+    margin-top: 30px;
+  }
+
   .footer-box {
-      flex-direction: column;
-    }
+    flex-direction: column;
+  }
 }
